# rtt_control_components

./: .gitignore  .travis.yml  CATKIN_IGNORE  CMakeLists.txt  README.md  actionlibtest.ops  package.xml  stack.xml
demo/: EtherCATwrite.ops  SignalGenerator.ops  TracingContinous.ops  TracingContionus.ops  UT_EtherCATread.ops  UT_EtherCATwrite.ops
include/: printLog.hpp
include/ROSinterfacing/: AnyToROS.hpp  BenchmarkReference.hpp  BoolToROS.hpp  DoubleToROS.hpp  DoublesToJointState.hpp  DoublesToROS.hpp  FollowJointTrajectoryActionToDoubles.hpp  JointStateAggregator.hpp  JointStateDistributor.hpp  JointTrajectoryToDoubles.hpp  PublishOdometry.hpp  ReadTwistMsg.hpp  RosDiagnostics.hpp  TrajectoryActionlib.hpp
include/SOEMinterfacing/: ADIns.hpp  AnalogInsGeneric.hpp  AnalogInsGeneric2.hpp  AnalogInsPera2.hpp  AnalogOuts.hpp  AnalogOutsGeneric.hpp  DigitalOuts.hpp  EtherCATping.hpp  ReadEncoders.hpp  ReadEncodersTimeStamp.hpp
include/arm/: GravityTorques.hpp  GravityTorquesParser.hpp  GripperControl.hpp  HandoverDetector.hpp  TorqueSensors.hpp  TorqueSensorsAutoC3.hpp
include/discontinuities/: Deadzone.hpp  Saturation.hpp
include/dynamixel/: AX12_control_table.h  DynamixelController.hpp
include/filters/: AdmittanceController.hpp  AdmittanceControllerSpindle.hpp  Controller.hpp  Current2VoltageFFW.hpp  FeedForward.hpp  FirstOrderLowPass.hpp  Polynomial.hpp  SkewedNotch.hpp  WeakIntegrator.hpp
include/math/: Abs.hpp  AddConstant.hpp  Addition.hpp  Differentiate.hpp  DotProduct.hpp  Equal.hpp  Gain.hpp  Integrator.hpp  MatrixTransform.hpp  Product.hpp  Sign.hpp  Sine.hpp  SmallerLarger.hpp  Sqrt.hpp  Subtraction.hpp  Sum.hpp
include/signalrouting/: Demux.hpp  Mux.hpp  Switch.hpp  VectorConcatenate.hpp
launch/: start.launch
rtt_ROS_interfacing/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml  tue-manifest.xml
rtt_ROS_interfacing/src/: BenchmarkReference.cpp  BenchmarkReference.hpp  BoolToROS.cpp  BoolToROS.hpp  DoubleToROS.cpp  DoubleToROS.hpp  DoublesToJointState.cpp  DoublesToROS.cpp  DoublesToROS.hpp  FollowJointTrajectoryActionToDoubles.cpp  FollowJointTrajectoryActionToDoubles.hpp  JointStateAggregator.cpp  JointStateAggregator.hpp  JointStateToDoubles.cpp  JointStateToDoubles.hpp  JointTrajectoryToDoubles.cpp  JointTrajectoryToDoubles.hpp  PublishOdometry.cpp  PublishOdometry.hpp  ReadTwistMsg.cpp  ReadTwistMsg.hpp  RosDiagnostics.cpp  RosDiagnostics.hpp
rtt_arm_components/: CMakeLists.txt  manifest.xml
rtt_arm_components/src/: ARM_GravityTorques.cpp  ARM_GravityTorques.hpp  ARM_GravityTorquesParser.cpp  ARM_GravityTorquesParser.hpp  ARM_GripperControl.cpp  ARM_TorqueSensors.cpp  ARM_TorqueSensorsAutoC3.cpp
rtt_control_msgs/: manifest.xml
rtt_custom_components/: CMakeLists.txt  clean_exit.ops
rtt_discontinuity_components/: CMakeLists.txt  manifest.xml
rtt_filter_components/: CMakeLists.txt  manifest.xml
rtt_filter_components/src/: AdmittanceControllers.cpp  AdmittanceControllers.hpp  AdmittanceControllersSpindle.cpp  Controller.cpp  Controller.hpp  FeedForward.cpp  FeedForward.hpp  FirstOrderLowPass.cpp  FirstOrderLowPass.hpp  LeadLag.cpp  LeadLag.hpp  LeadLags.cpp  LeadLags.hpp  PID.cpp  PID.hpp  Polynomials.cpp  SecondOrderLowPass.cpp  SecondOrderLowPass.hpp  SecondOrderLowPasses.cpp  SecondOrderLowPasses.hpp  SkewedNotch.cpp  SkewedNotch.hpp  WeakIntegrator.cpp  WeakIntegrator.hpp  WeakIntegrators.cpp  WeakIntegrators.hpp
rtt_logic_components/: CMakeLists.txt  mainpage.dox  manifest.xml
rtt_math_components/: CMakeLists.txt  manifest.xml
rtt_math_components/src/: Abs.cpp  Abs.hpp  AddConstant.cpp  AddConstant.hpp  Addition.cpp  Addition.hpp  Derivative.cpp  Derivative.hpp  Differentiate.cpp  Differentiate.hpp  DotProduct.cpp  DotProduct.hpp  Gain.cpp  Gain.hpp  Gains.cpp  Gains.hpp  Integrator.cpp  Integrator.hpp  Polynomials.cpp  Polynomials.hpp  Product.cpp  Product.hpp  RealTimeDerivator.cpp  RealTimeDerivator.hpp  Sign.cpp  Sign.hpp  Sqrt.cpp  Sqrt.hpp  Subtraction.cpp  Subtraction.hpp  Sum.cpp  Sum.hpp
rtt_matrix_components/: CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
rtt_routing_components/: CMakeLists.txt  manifest.xml
rtt_soem_interfacing/: CMakeLists.txt  mainpage.dox  manifest.xml
rtt_source_components/: CMakeLists.txt  manifest.xml
rtt_source_components/src/: ConstantBool.cpp  ConstantSignal.cpp  ConstantSignal.hpp  GaussianRandomNumber.cpp  GaussianRandomNumber.hpp  PulseSignal.cpp  PulseSignal.hpp  RampSignal.cpp  RampSignal.hpp  ReferenceGenerator.cpp  ReferenceGenerator.hpp  SawtoothSignal.cpp  SawtoothSignal.hpp  SineWave.cpp  SineWave.hpp  StepSignal.cpp  StepSignal.hpp  UniformRandomNumber.cpp  UniformRandomNumber.hpp
rtt_supervisory_components/: CMakeLists.txt  mainpage.dox  manifest.xml  tue-manifest.xml
rtt_supervisory_components/src/: ActuatorEnabler.cpp  ActuatorEnabler.hpp  EtherCATsupervisor.cpp  EtherCATsupervisor.hpp  GenSupervisor.cpp  GenSupervisor.hpp  Homing.cpp  Homing.hpp  Homing2.cpp  Homing2.hpp  Safety.cpp  Safety.hpp  SafetyMonitor.cpp  SafetyMonitor.hpp  Supervisor.cpp  Supervisor.hpp  SupervisorOld.cpp  SupervisorOld.hpp  soem_armEthercat.cpp  soem_armEthercat.hpp  soem_armEthercatBU.cpp
rtt_tracing/: CMakeLists.txt  mainpage.dox  manifest.xml  test.ops
rtt_visualization/: mainpage.dox  manifest.xml
scripts/: analyzehardware  analyzehardware.py  emaillogfile  graph  graphold  graphop  orocosgraph.py  orocoslog2roslog.py  test.ops
src/: ActuatorEnabler.cpp  ActuatorEnabler.hpp  EtherCATread.cpp  EtherCATread.hpp  EtherCATwrite.cpp  EtherCATwrite.hpp  Homing.cpp  Homing.hpp  ROSinterface.cpp  ROSinterface.hpp  SOEMdummy.cpp  SOEMdummy.hpp  Safety.cpp  Safety.hpp  SignalGenerator.cpp  SignalGenerator.hpp  Supervisor.cpp
test/: test-controller.launch  test-controller.ops  test-rttplot.launch  test-rttplot.ops  test_FollowJointTrajectoryAction.cpp
threadingtest/: ThreadingTest.ops  ThreadingTestBase.cpp  ThreadingTestBase.hpp  ThreadingTestContr.cpp  ThreadingTestContr.hpp  ThreadingTestRead.cpp  ThreadingTestRead.hpp  ThreadingTestWrite.cpp  ThreadingTestWrite.hpp
(+281 files in other folders)
