<package>
  <name>rtt_control_components</name>
  <version>1.0.0</version>
  <license>BSD</license>
  <maintainer email="t.t.g.clephas@alumnus.tue.nl">Tim Clephas</maintainer>
  <description>
    rtt_control_components
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rtt</build_depend>
  <build_depend>ocl</build_depend>
  <build_depend>rtt_ros</build_depend>
  <build_depend>soem_master</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>orogen</build_depend>
  <build_depend>amigo_ref_interpolator</build_depend>
  <build_depend>scl_filters</build_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>rtt_std_msgs</build_depend>
  <build_depend>rtt_amigo_msgs</build_depend>
  <build_depend>rtt_rosgraph_msgs</build_depend>
  <build_depend>eigen</build_depend>


  <run_depend>rtt</run_depend>
  <run_depend>ocl</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>soem_master</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>orogen</run_depend>
  <run_depend>amigo_ref_interpolator</run_depend>
  <run_depend>scl_filters</run_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>rtt_std_msgs</run_depend>
  <run_depend>rtt_amigo_msgs</run_depend>
  <run_depend>rtt_rosgraph_msgs</run_depend>
  <run_depend>eigen</run_depend>
</package>


